<resources>
    <string name="app_name">LearnMixerMobile</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="titleLearnMixer">LearnMixer</string>
    <string name="btnSearch">Search</string>
    <string name="txvHelp">Help</string>
    <string name="txvLogOut">Log out</string>
    <string name="imgBtnHistory">History</string>
    <string name="title_activity_history">History</string>
    <string name="face">user face</string>
    <string name="whatDo">Mari karisa used our colection</string>
    <string name="whatUse">My collection name</string>
    <string name="btnBack">Back</string>
    <string name="MathMouth">Math Mouth</string>
    <string name="txvDescription">Description</string>
    <string name="txvSubject">Subject</string>
    <string name="txvTopic">Topic</string>
    <string name="txvAgeGroup">Age group</string>
    <string name="txvLicence">Licence</string>
    <string name="txvTag">Tag</string>
    <string name="txvLevel">Level of engagement</string>
    <string name="title_activity_chapter_one">ChapterOneActivity</string>
    <string name="chapterOne">Chapter 1</string>
    <string name="subChapterOne">Sub Chapter One</string>
    <string name="myNotes">Your Notes</string>
    <string name="title_activity_sub_chapter_one">subChapterOneActivity</string>
    <string name="SubChapterOneText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod convallis dui, vitae tincidunt dolor efficitur gravida. Maecenas sed lorem et dui venenatis commodo. Quisque ut tempus felis, sit amet porttitor augue. Praesent pharetra id ipsum vitae posuere. Pellentesque dapibus, dui sed tincidunt accumsan, arcu urna finibus turpis, ac cursus arcu sapien id sem. Etiam tempus dolor in tortor scelerisque faucibus.</string>
    <string name="SugestedColection">Sugested colection</string>
    <string name="colectionName">Colection Name</string>
    <string name="colectionCount1">(40)</string>
    <string name="colectionCount2">(65)</string>
    <string name="colectionCount3">(124)</string>
    <string name="SugestedResources">Sugested learning resouses</string>
    <string name="ResourcesName">Learning resouces name</string>
    <string name="Tools">Tools</string>
    <string name="Branch">Branch colection</string>
    <string name="Copy">Copy colection</string>
    <string name="Share">Share colection</string>
    <string name="Version">Version history</string>
    <string name="title_activity_learning_resouce">LearningResouceActivity</string>
    <string name="learningResouces">Learning Resouces</string>
    <string name="txvAutor">Author</string>
    <string name="txvAutorName">Mari Maasikas</string>
    <string name="txvDate">Date created</string>
    <string name="txvDateGet">1.1.2015</string>
    <string name="shortText">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec euismod convallis dui, vitae</string>
    <string name="getAge">14-15</string>
    <string name="txvRepository">Repository</string>
    <string name="getRepository">Colienmu</string>
    <string name="title_activity_share">ShareActivity</string>
    <string name="sharing">Sharing</string>
    <string name="acesss">Acess</string>
    <string name="rbtnPublic">Public</string>
    <string name="rbtnPrivate">Pripvate</string>
    <string name="rbtnAcessible">Accessible with link</string>
    <string name="addUser">Add user</string>
    <string name="shareWith">Share with a class</string>
    <string name="postToSocial">Postu tu social network</string>
    <string name="versionHistory">Version history</string>
    <string name="copies">Copies</string>
    <string name="copy1">Copy 1, Juhan Kaalikas, 20.01.2015</string>
    <string name="copy2">Copy 2, Malle Juurikas, 10.02.2014</string>
    <string name="copy3">Copy 3, Tiina Tamm, 02.03.2014</string>
    <string name="branches">Branches</string>
    <string name="branche1">Version 1, Juhan Maasikas, 10.01.2015</string>
    <string name="branche2">Version 2, Reimo Kartul, 10.04.2012</string>
    <string name="branche3">Version 3, Mihkel Kivi, 12.09.2011</string>
    <string name="GoTochapterOne">Go to chapter 1</string>
    <string name="help">Help</string>
    <string name="logOut">Log out</string>


</resources>
