<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView android:text="@string/subChapterOne" android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textSize="30sp"
    />

    <android.inputmethodservice.ExtractEditText
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/SubChapterOneText"
        android:id="@+id/extractEditText"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:editable="false" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnBack"
        android:onClick="showChapterOne"
        />

</LinearLayout>
